# AsmKit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh-cn.md
cmake/: AsmKitConfig.cmake.in
docs/: acknowledgements.md  acknowledgements.zh-cn.md  api-reference.md  api-reference.zh-cn.md  easy-api.md  easy-api.zh-cn.md  execution-model.md  execution-model.zh-cn.md  generated-data.md  generated-data.zh-cn.md  index.md  index.zh-cn.md  license.md  license.zh-cn.md  target-support.md  target-support.zh-cn.md
include/asmkit/: asmkit.h  asmkit_analysis.h  asmkit_arch.h  asmkit_bpf.h  asmkit_decode.h  asmkit_easy.h  asmkit_encode.h  asmkit_error.h  asmkit_metadata.h  asmkit_mnemonic.h  asmkit_relocate.h  asmkit_text.h
src/analysis/: asmkit_analysis.c
src/core/: asmkit_bounds.c  asmkit_easy.c  asmkit_engine.c  asmkit_error.c  asmkit_internal.h  asmkit_metadata.c  asmkit_workspace.c
src/decode/: asmkit_decode.c
src/encode/: asmkit_emit.c
src/relocate/: asmkit_relocate.c
src/text/: asmkit_text.c
tests/: all_tests.c  test_support.h
tests/allocation/: scan_forbidden.cmake
tests/analysis/: test_analysis.c
tests/api/: test_easy.c
tests/concurrency/: test_concurrency.c
tests/decode/: test_decode.c
tests/encode/: test_emit.c
tests/instruction_corpus/: test_instruction_corpus.c  test_instruction_corpus_bpf64.c  test_instruction_corpus_wasm32.c  test_instruction_corpus_x86_16.c
tests/performance/: CMakeLists.txt  README.md  decode_bench.cpp
tests/performance/yaxpeax_x86_capi/: Cargo.toml.in
tests/performance/yaxpeax_x86_capi/src/: lib.rs
tests/relocate/: test_relocate.c
tools/ntos_compare/: asmkit_decode_dump.c  build_decode_dump.cmd  compare_ntoskrnl.py
tools/real_world_test/: asmkit_decode_dump.c  build_decode_dump.cmd  real_world_test.py
